test/interaction/Issue641.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue641 (Issue641.agda). " t)
(agda2-status-action "Checked")
(agda2-info-action "*All Done*" "" nil)
((last . 1) . (agda2-goals-action '()))
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue641 (Issue641.agda). " t)
(agda2-info-action "*Error*" "Issue641.agda:3.7-10: error: [UnequalSorts] Set₁ != Set when checking that the expression Set has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue641.agda" . 39)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
