test/interaction/Issue641.agda
module Issue641 where
Foo : Set
Foo = Set
